--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>                                         
             <a href="#" class="golovna">Головна</a>                    
              <a href="#" class="about">Що можна тут робити?</a>                    
-              <a href="#" class="blog">Новина</a>                     
+              <a href="https://procuksa.github.io/page33/" class="blog">Новина</a>                     
               <a href="https://procuksa.github.io/page5/" class="contact">Як скачати та зареєструватись?</a>                             
                          </nav>
                          <main> 
