--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Факти</h1>       
         <nav>                                         
             <a href="#" class="golovna">Головна</a>                    
-             <a href="#" class="about">Що можна тут робити?</a>                    
+             <a href="https://procuksa.github.io/page2/" class="about">Що можна тут робити?</a>                    
               <a href="https://procuksa.github.io/page33/" class="blog">Новина</a>                     
               <a href="https://procuksa.github.io/page5/" class="contact">Як скачати та зареєструватись?</a>                             
                          </nav>
