--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </p>
                     <p>2.Найактивнішим користувачем Дискорду
                         є Bot MEE6.</p>
-                        <p><img src="https://static.wikia.nocookie.net/discord/images/e/e6/Mee6.png/revision/latest?cb=20201028153812" width="200px"/></p>
+                        <p><img src="https://toppng.com/uploads/preview/the-discord-bot-mee6-bot-11562879877rryaoo9oed.png" width="200px"/></p>
 
                         <p>3.Станом на 2021 рік у сервісі зареєстровано близько 563 мільйонів користувачів та понад 196.2 мільйонів щомісячних активних користувачів.</p>
 
