--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </p>
                     <p>2.Найактивнішим користувачем Дискорду
                         є Bot MEE6.</p>
-                        <p><img src="https://e0.pxfuel.com/wallpapers/397/115/desktop-wallpaper-discord-bots-etc-ideas-in-2021-discord-bot-being-used-quotes.jpg" width="200px"/></p>
+                        <p><img src="https://i.postimg.cc/50NtpsqX/desktop-wallpaper-discord-bots-etc-ideas-in-2021-discord-bot-being-used-quotes.jpg" width="200px"/></p>
 
                         <p>3.Станом на 2021 рік у сервісі зареєстровано близько 563 мільйонів користувачів та понад 196.2 мільйонів щомісячних активних користувачів.</p>
 
